2011-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m: Extract the bitmap conversion into
	a local function and use it througout the file.

2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: Check for the X extention libraries (Xext, Xt, Xmu)
	using pkg-config if they aren't found with the default test

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m,
	* Source/x11/XGServerWindow.m: Change the way the image for the cursor
	gets passed on to the backend. The old way could only work for 8
	bit data.

2011-03-05  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/xpbs.m (+xEvent:, +receivedEvent:type:extra:,
	-requestData:, -xTimeByAppending): Fix race condition where gpbs
	could time out waiting for a property change notification from the
	X server, which is already present in the X event queue.

2011-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m,
	* Source/x11/XGServerWindow.m: New methods for cursor
	handling. Requires corresponding gui change.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (-orderwindow:::): Omit app icons
	and mini windows from the pager and task bar even when they are
	displayed at normal window level.

2010-12-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m: Remove a few compiler warnings.

2010-12-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m (GSCreateBitmap, -DPSImage:::...:):
	Better error detection.

2010-12-08 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/win32/WIN32Server.m: Added better logging on Window create and destroy errors.
	Added a secondary call to get current mouse position if the first call fails.
	* Source/win32/w32_text_focus.m: Cast parameter to appropriate (HWND) type.

2010-11-18 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/winlib/WIN32FontInfo.m:
	* Source/winlib/WIN32GState.m:
	* Source/cairo/CairoFontInfo.m: